syntax = "proto3";

package reply;
option go_package = "github.com/JIEEEN/grpc-board";

service ReplyService {
    rpc GetReplyUser (GetReplyUserRequest) returns (GetReplyUserResponse);
    rpc GetReplyNickname (GetReplyNicknameRequest) returns (GetReplyNicknameResponse);
    rpc CreateReply (CreateReplyRequest) returns (CreateReplyResponse);
    rpc GetAllReplyBoard (AllReplyBoardRequest) returns (AllReplyBoardResponse);
    rpc UpdateReply (UpdateReplyRequest) returns (UpdateReplyResponse);
    rpc DeleteReply (DeleteReplyRequest) returns (DeleteReplyResponse);
}

message Reply {
    string id = 1;
    string user_id = 2;
    string nickname = 3;
    string board_id = 4;
    string contents = 5;
}
message ReplyRequest {
    string user_id = 1;
    string nickname = 2;
    string board_id = 3;
    string contents = 4;
}

message GetReplyUserRequest {
    string user_id = 1;
}
message GetReplyUserResponse {
    repeated Reply replies = 1;
}

message GetReplyNicknameRequest {
    string nickname = 1;
}
message GetReplyNicknameResponse {
    repeated Reply replies = 1;
}

message CreateReplyRequest {
    ReplyRequest reply_request = 1;
}
message CreateReplyResponse {
    bool result = 1;
}

message AllReplyBoardRequest {
    string board_id = 1;
}
message AllReplyBoardResponse {
    repeated Reply replies = 1;
}

message UpdateReplyRequest {
    Reply reply = 1;
}
message UpdateReplyResponse {
    bool result = 1;
}

message DeleteReplyRequest {
    string id = 1;
}
message DeleteReplyResponse {
    bool result = 1;
}
